# AuthTDD

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  database.py  main.py
app/core/: dependencies.py  exceptions.py  security.py
app/models/: __init__.py  oauth_client.py  token.py  user.py
app/routers/: auth.py  oauth.py  users.py
app/schemas/: oauth.py  token.py  user.py
app/services/: auth_service.py  oauth_service.py  token_service.py
app/static/: index.html
specs/: 01_user_registration.md  02_login.md  03_oauth_authorize.md  04_oauth_token.md  05_token_refresh.md  06_protected_routes.md  07_revocation.md
tests/: conftest.py
tests/e2e/: test_authorization_code_flow.py
tests/integration/: test_login.py  test_oauth_authorize.py  test_oauth_token.py  test_protected_routes.py  test_register.py  test_revocation.py  test_token_refresh.py
tests/unit/: test_auth_service.py  test_oauth_service.py  test_security.py  test_token_service.py
