[project]
name = "auth-tdd"
version = "0.1.0"
description = "Sistema de Autenticação OAuth2 — Spec Driven + Test Driven Development"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true
